...
            app:dayBackgroundColor="@android:color/white"
            app:todayBackgroundColor="@color/primaryBackgroundYellow"
            app:headerColumnBackground="#ffffffff"/>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent" android:layout_height="match_parent"
                  android:id="@+id/main_fragment"/>

    <include android:id="@+id/progress_bar_screen"
             layout="@layout/progress_bar_screen"
             android:visibility="gone"
    />

...
