...
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/chat_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="10dp">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/talking_recycler"
                android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_new_talk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            android:backgroundTint="@color/primaryDarkColor"
...
