...
              android:gravity="center"
              android:layout_margin="10dp"
              android:textSize="20sp"
              android:textStyle="bold"/>


    <androidx.recyclerview.widget.RecyclerView android:id="@+id/new_talking_recycler"
                                               android:layout_width="match_parent"
                                               android:layout_height="wrap_content"
                                               app:layout_constraintTop_toBottomOf="@+id/new_talkings_text_label"
                                               app:layout_constraintStart_toStartOf="parent">
    </androidx.recyclerview.widget.RecyclerView>

...
